# sdk-typescript

./: CHANGELOG.md  README.md  package.json  pyproject.toml  tsconfig.json
docs/: HTTP_ENDPOINTS.md
examples/: PAGE12_COOKBOOK.md  README.md  REVIEWS_QUICKSTART.md  page13_review_cookbook.py  page13cookbook.md  review_workflow.py
examples/prompts/page13_review/: README.md  scout.md  specialists.json  specialists_common.md
js/: README.md  package-lock.json  package.json
js/scripts/: README.md  drawings_quickstart.mjs  reviews_workflow.mjs
js/src/: index.ts
js/test/: index.test.ts
scripts/: README.md  projects_workflow.mjs  reviews_workflow.mjs  smoke_local.mjs  smoke_local.py
src/: index.ts
src/struai/: __init__.py  _base.py  _client.py  _exceptions.py  _version.py
src/struai/models/: __init__.py  reviews.py
src/struai/resources/: __init__.py  _uploads.py  drawings.py  projects.py  reviews.py
test/: index.test.ts
tests/: test_reviews_resource.py
