[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "struai"
version = "2.4.0"
description = "StruAI Drawing Analysis SDK - AI-powered construction drawing analysis"
readme = "README.md"
license = "MIT"
authors = [
    { name = "StruAI", email = "support@struai.com" }
]
keywords = [
    "struai",
    "structural engineering",
    "construction drawings",
    "drawing analysis",
    "cad",
    "pdf",
    "ai",
    "knowledge graph",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Typing :: Typed",
]
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "pillow>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://struai.com"
Documentation = "https://docs.struai.com/python"
Repository = "https://github.com/struai/struai-python"
Issues = "https://github.com/struai/struai-python/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/struai"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
version_variables = ["src/struai/_version.py:__version__"]
branch = "main"
build_command = "pip install build && python -m build"
commit_message = "chore(release): {version}\n\nAutomatically generated by python-semantic-release"

[tool.semantic_release.commit_parser_options]
allowed_tags = ["build", "chore", "ci", "docs", "feat", "fix", "perf", "refactor", "style", "test"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]
